--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     height:                 auto;
     font-size:              100%;
     text-align:             center;
-     overflow:              auto;
+    overflow:               auto;
 }
 h1,h2,p{
     margin:                 0 auto;
@@ -13,27 +13,47 @@ h1,h2,p{
 }
 .banner{
     width:                  50%;
-    height:                 50%;
-    margin:                 0 auto;
     border:                 2px solid #C0C0C0;
     position:               absolute;
+    margin-top:             0;
+    margin-left:            0;
+    border-radius:          5%;
+}
+.banner_1{
+    height:                 50%;
     top:                    25%;
     left:                   25%;
-    margin-top:             0px;
-    margin-left:            0px;
-    border-radius:          5%;
-    /*/*box-shadow:             */
+}
+.banner_2{
+    height:                 70%;
+    top:                    15%;
+    left:                   25%;
 }
 .head{
     width:                  100%;
     height:                 30%;
     margin:                 auto auto;
-    padding-top:            8%;           
+               
+}
+.head_1{
+    padding-top:            8%;
+}
+.head_2{
+    padding-top:            3%;
+    height:                 20%;
+}
+.head_h2{
+    text-align:             left;
+    padding-left:           2%;
+    border-bottom:          0.1em solid #C0C0C0;
+}
+.head_h2 h2{
+    color:                  #C0C0C0;
+    font-family:            "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
 }
 .head h1{
     font-family:            "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
     font-size:              2em;
-    font-weight:            50%;
 }
 .p{ 
    margin:                  0 auto;
@@ -42,7 +62,12 @@ h1,h2,p{
 }
 .p input{
     border-radius:          5%;
-   
+}
+.p0_1{
+    color:                   #C0C0C0;
+    font-family:            "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+    font-size:              0.1em;
+    padding-left:           10%;
 }
 p{
     color:                   #C0C0C0;
@@ -52,13 +77,15 @@ p{
     height:                 50%;
     margin:                 0 auto;
 }
+.body_2{
+    padding-top:            5%;
+}
 a:link{
     color:                  #1E90FF;
     text-decoration:        none;
-
 }
-a:valid{
-    color:                  #1E90FF;               
+a:visited{
+    color:                  #1E90FF;  
 }
 a:hover{
     color:                  #87CEFA;
@@ -67,14 +94,19 @@ a:active{
     color:                  #1E90FF;
 }
 .checkbox{
-    padding-bottom:         4%;
+    padding-bottom:         3%;
 }
 .submit{
+    /*background-color:       transparent;*/
+    background-color:       #6495ED;
+    border:                 0 solid #C0C0C0;
+    border-radius:          5%;
+}
+.submit_1{
     padding:                1%;
     width:                  40%;
-    /*color:                  #6495ED;*/
-    background-color:       transparent;
-    background-color:       #6495ED;
-    border:                 0px solid #C0C0C0;
-    border-radius:          5%;
+}
+.submit_2{
+    padding:                1%;
+    width:                  50%;
 }
