--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,20 @@ h1,h2,p{
     top:                    15%;
     left:                   25%;
 }
+.banner_3{
+    height:                 40%;
+    margin-top:             10%;
+}
+.banner_4{
+    margin-top:             5%;
+}
+.banner_5{
+    height:                 50%;
+    margin-top:             2%;
+}
+.banner_6{
+    height:                 25%;
+}
 .head{
     width:                  100%;
     height:                 30%;
@@ -36,7 +50,7 @@ h1,h2,p{
                
 }
 .head_1{
-    padding-top:            8%;
+    padding-top:            6%;
 }
 .head_2{
     padding-top:            3%;
@@ -55,22 +69,40 @@ h1,h2,p{
     font-family:            "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
     font-size:              2em;
 }
-.p{ 
+.p{
+   color:                   #C0C0C0;
    margin:                  0 auto;
    height:                  25%;
    width:                   100%;
 }
+p{
+   color:                   #C0C0C0;
+}
+.p1{
+    height:                 15%;
+}
+.p2{
+    padding-bottom:         2%;
+}
+.p3{
+    height:                 20%;
+}
+.p4{
+    height:                 25%;
+}
+.p5{
+    height:                 40%;
+    padding-bottom:         2%;
+}
+
 .p input{
     border-radius:          5%;
 }
 .p0_1{
-    color:                   #C0C0C0;
+    color:                  #C0C0C0;
     font-family:            "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
     font-size:              0.1em;
     padding-left:           10%;
-}
-p{
-    color:                   #C0C0C0;
 }
 .body{
     width:                  100%;
@@ -80,6 +112,11 @@ p{
 .body_2{
     padding-top:            5%;
 }
+.body_2_1{
+    height:                 50%;
+    padding-top:            2%;
+}
+
 a:link{
     color:                  #1E90FF;
     text-decoration:        none;
@@ -90,14 +127,16 @@ a:visited{
 a:hover{
     color:                  #87CEFA;
 }
+ul a:hover{
+    font-size:              1.2em;
+}
 a:active{
     color:                  #1E90FF;
 }
 .checkbox{
-    padding-bottom:         3%;
+    padding-bottom:         2%;
 }
 .submit{
-    /*background-color:       transparent;*/
     background-color:       #6495ED;
     border:                 0 solid #C0C0C0;
     border-radius:          5%;
@@ -110,3 +149,65 @@ a:active{
     padding:                1%;
     width:                  50%;
 }
+.submit_3{
+    padding:                1%;
+    width:                  35%;
+}
+.switch{
+     padding-top:           3%;
+ }
+.top{
+    width:                  100%;
+    height:                 7%;
+    border-bottom:          3px solid #C0C0C0;;
+    position:               static;
+    margin:                 0 auto;
+    color:                  #1E90FF;
+    font-family:            Arial, Helvetica, sans-serif;
+    font-size:              2.5em;
+    padding-top:            3%;
+    padding-bottom:         1%;
+}
+.body_3{
+    width:                  70%;
+    margin:                 0 auto;
+    padding-top:            1%;
+}
+.body_3_1{
+    margin:                 0 auto;
+    padding-top:            2%;
+    padding-bottom:         1%;
+}
+.body_3_1 h1{
+    font-size:              2em;
+
+}
+.body_4{
+    height:                 30%;
+    width:                  20%;
+    float:                  left;
+    padding-top:            4%;
+    padding-left:           2%;
+    text-align:             left;
+}
+.body_5{
+    padding-top:            5%;
+}
+footer{
+    width:                  100%;
+    position:               absolute;
+    bottom:                 0;
+    height:                 8%;
+}
+ul{
+    height:                 5%;
+    margin:                 0;
+    padding:                1%;
+    list-style-type:        none;
+    font-size:              1.2em;
+}
+.register_1{
+    padding-top:            2%;
+}
+
+
